--- a/sc-st.yaml
+++ b/sc-st.yaml
@@ -297,7 +297,7 @@ rules:
   - RULE-SET,lancidr,DIRECT
   - RULE-SET,cncidr,DIRECT
   - RULE-SET,telegramcidr,PROXY
-  - RULE-SET,ipattributionbypass,DIRECT
+  - RULE-SET,ipattributionbypass,PROXY
   - GEOIP,LAN,DIRECT
   - GEOIP,CN,DIRECT
   - MATCH,PROXY
